fixed tiny mce editor

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </html>
 <!-- Place the first <script> tag in your HTML's <head> -->
   <script src="https://cdn.tiny.cloud/1/hyxd2bsdwowdov38aumb0f2rrvncoh303wpc1rntd7kuw8sy/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
-
+  <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
   <!-- Place the following <script> and <textarea> tags your HTML's <body> -->
   <script>
     tinymce.init({
